# tenacity

./: .clang-tidy  .gitignore  .gitmodules  .weblate  BUILDING.md  CHANGELOG.txt  CMAKE_OPTIONS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  LICENSE.txt  PACKAGING.md  PULL_REQUEST_TEMPLATE.md  README.md  audacity.dox.in  saucedacity.dox.in  tenacity.dox  tenacity.dox.in  vcpkg.json
cmake-proxies/libmad/: CMakeLists.txt
help/: CMakeLists.txt  audacity.1  audacity.appdata.xml  io.github.saucedacity.Saucedacity.metainfo.xml  io.github.saucedacity.Saucedacity.metainfo.xml.in  org.tenacityaudio.Tenacity.metainfo.xml.in  saucedacity.metainfo.xml.in  tenacity.1  tenacity.metainfo.xml.in
lib-src/pffft/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/image-compiler/: CMakeLists.txt  imageCompilerMain.cpp
libraries/lib-audacity-application-logic/: CMakeLists.txt
libraries/lib-audio-devices/: AudioIOBase.cpp  AudioIOBase.h  AudioMemoryManager.cpp  AudioMemoryManager.h  CMakeLists.txt  Device.cpp  Device.h  DeviceChange.cpp  DeviceChange.h  DeviceManager.cpp  DeviceManager.h
libraries/lib-audio-graph/: CMakeLists.txt
libraries/lib-audio-io/: AudioIO.cpp  CMakeLists.txt  PlaybackSchedule.h
libraries/lib-audio-unit/: AudioUnitEffectsModule.cpp  AudioUnitInstance.cpp  AudioUnitWrapper.cpp  AudioUnitWrapper.h  CMakeLists.txt
libraries/lib-basic-ui/: BasicUI.cpp  BasicUI.h  CMakeLists.txt  GenericObject.cpp  GenericObject.h  GenericString.cpp  GenericString.h  GenericUIAssert.cpp  GenericUIAssert.h  README.md
libraries/lib-breakpad-configurer/: CMakeLists.txt
libraries/lib-builtin-effects/: CMakeLists.txt  ChangePitchBase.cpp  ChangeTempoBase.cpp  DtmfBase.h  DynamicCompressorBase.cpp  DynamicCompressorBase.h  EqualizationCurvesList.cpp  SoundTouchBase.cpp  StereoToMono.cpp
libraries/lib-channel/: CMakeLists.txt
libraries/lib-cloud-audiocom/: CMakeLists.txt
libraries/lib-command-parameters/: CMakeLists.txt
libraries/lib-components/: CMakeLists.txt  ComponentInterface.h
libraries/lib-concurrency/: CMakeLists.txt
libraries/lib-crashpad-configurer/: CMakeLists.txt
libraries/lib-crypto/: CMakeLists.txt
libraries/lib-dynamic-range-processor/: CMakeLists.txt
libraries/lib-effects/: CMakeLists.txt  Effect.cpp  LoadEffects.cpp
libraries/lib-exceptions/: AudacityException.cpp  AudacityException.h  CMakeLists.txt  InconsistencyException.cpp  InconsistencyException.h  SaucedacityException.cpp  SaucedacityException.h  TenacityException.cpp  TenacityException.h  UserException.h
libraries/lib-export-ui/: CMakeLists.txt
libraries/lib-ffmpeg-support/: AVCodecFunctions.h  CMakeLists.txt  FFmpegFunctions.cpp  FFmpegFunctions.h
libraries/lib-fft/: CMakeLists.txt
libraries/lib-file-formats/: CMakeLists.txt
libraries/lib-files/: AudacityLogger.cpp  CMakeLists.txt  FileException.cpp  FileException.h  FileNames.cpp  FileNames.h  PathList.cpp  SaucedacityLogger.cpp  SaucedacityLogger.h  TempDirectory.cpp  TempDirectory.h  TenacityLogger.cpp  TenacityLogger.h
libraries/lib-graphics/: CMakeLists.txt
libraries/lib-import-export/: CMakeLists.txt  Import.cpp  Import.h  ImportPlugin.h
libraries/lib-ipc/: CMakeLists.txt
libraries/lib-label-track/: CMakeLists.txt
libraries/lib-ladspa/: CMakeLists.txt  LadspaEffectsModule.cpp
libraries/lib-lv2/: CMakeLists.txt  LV2EffectBase.cpp  LV2Instance.cpp  LV2Ports.cpp  LV2Ports.h  LoadLV2.cpp
libraries/lib-math/: CMakeLists.txt  Dither.cpp  FFT.cpp  FFT.h  InterpolateAudio.cpp  Matrix.cpp  RealFFTf.cpp  Resample.cpp  SSEMathFuncs.h  SampleCount.cpp  SampleFormat.cpp  Spectrum.cpp
libraries/lib-menus/: CMakeLists.txt  CommandManager.cpp  MenuRegistry.h
libraries/lib-mixer/: CMakeLists.txt  EffectStage.cpp  Mix.cpp  Mix.h  MixerSource.cpp  WideSampleSource.cpp
libraries/lib-module-manager/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  ModuleSettings.cpp  PluginManager.cpp  PluginManager.h
libraries/lib-music-information-retrieval/: CMakeLists.txt
libraries/lib-network-manager/: CMakeLists.txt
libraries/lib-note-track/: CMakeLists.txt  MIDIPlay.cpp  NoteTrack.cpp  NoteTrack.h  WrapAllegro.h
libraries/lib-numeric-formats/: CMakeLists.txt
libraries/lib-nyquist-effects/: CMakeLists.txt  LoadNyquist.cpp  NyquistBase.cpp
libraries/lib-playable-track/: CMakeLists.txt
libraries/lib-preference-pages/: CMakeLists.txt  LibraryPrefs.cpp  PrefsPanel.cpp
libraries/lib-preferences/: CMakeLists.txt  FileConfig.cpp  Prefs.cpp  Prefs.h
libraries/lib-project/: CMakeLists.txt  Project.cpp  Project.h  ProjectFormatExtensionsRegistry.cpp  ProjectFormatExtensionsRegistry.h  ProjectFormatVersion.cpp  ProjectFormatVersion.h  ProjectStatus.cpp  ProjectStatus.h
libraries/lib-project-file-io/: CMakeLists.txt  DBConnection.cpp  ProjectFileIO.cpp  SqliteSampleBlock.cpp
libraries/lib-project-history/: CMakeLists.txt
libraries/lib-project-rate/: CMakeLists.txt  ProjectRate.cpp  ProjectRate.h  QualitySettings.cpp  QualitySettings.h
libraries/lib-realtime-effects/: CMakeLists.txt  RealtimeEffectManager.h
libraries/lib-registries/: AttachedVirtualFunction.h  CMakeLists.txt  ClientData.h  Registrar.h  Registry.cpp  Registry.h
libraries/lib-sample-track/: CMakeLists.txt  Mix.cpp  Mix.h
libraries/lib-screen-geometry/: CMakeLists.txt  Decibels.h  NumberScale.h  SelectedRegion.cpp  SelectedRegion.h  ViewInfo.cpp  ViewInfo.h  ZoomInfo.cpp  ZoomInfo.h
libraries/lib-sentry-reporting/: CMakeLists.txt  SentryReport.cpp
libraries/lib-shuttlegui/: CMakeLists.txt  ShuttleGui.cpp  ShuttleGui.h  SliderTextCtrl.h
libraries/lib-snapping/: CMakeLists.txt  Snap.cpp
libraries/lib-sqlite-helpers/: CMakeLists.txt
libraries/lib-stretching-sequence/: CMakeLists.txt
libraries/lib-string-utils/: CMakeLists.txt  CodeConversions.cpp  CodeConversions.h  DateTimeConversions.cpp  DateTimeConversions.h
libraries/lib-strings/: CMakeLists.txt  Identifier.cpp  Identifier.h  (+7 more)
modules/: CMakeLists.txt
qt-src/: CMakeLists.txt  TenacityApp.cpp  TenacityApp.h  TenacityHeaders.h  main.cpp
(+1322 files in other folders)
